# NORA

./: .env.example  .gitignore  README.md  pyproject.toml  strom_statistikk_og_graf.md
data/: .gitkeep
nora/: __init__.py  agent.py  calculator.py  chart_generator.py  cli.py  config.py  file_reader.py  pdf_generator.py  web_fetcher.py
tests/: __init__.py  test_calculator.py  test_file_reader.py
