[project]
name = "nora"
version = "0.1.0"
description = "NORA – Numerical Operations & Results Assistant"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # LLM backend
    "openai>=1.30.0",

    # File reading
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",       # Excel .xlsx
    "xlrd>=2.0.0",            # Excel .xls (legacy)
    "pdfplumber>=0.11.0",     # PDF text + tables
    "python-docx>=1.1.0",     # Word .docx

    # HTTP / web data
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",

    # Calculations / numerics
    "numpy>=1.26.0",
    "scipy>=1.13.0",

    # Config / env
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
nora = "nora.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
